test-cases/error/raw-plugin-exception.golden/error.ansi
Exception thrown by raw plugin, all raw plugins ignored

test plugin simulating exception: Plugin configured to fail on any transaction
